some fixes?